--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 				<h3>END POSITION</h3>
                 <select id="End-Position">
                     <option value="No_Climb">No Climb</option>
-                    <option value="Failed Climb">Failed Climb</option>
+                    <option value="Failed_Climb">Failed Climb</option>
                     <option value="Parked">Parked</option>
                     <option value="Onstage">Onstage</option>
                     <option value="Spotlight">Spotlight</option>
