MORE BUG FIXES (PLS BE THE LAST ONE
changed third on change to third on chain and other unimportant little bug fixes

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <option value="Not_Completed">Not Completed</option>
                     <option value="First_On_Chain">First On Chain</option>
                     <option value="Second_On_Chain">Second On Chain</option>
-                    <option value="Third_On_Change">Third On Chain</option>
+                    <option value="Third_On_Chain">Third On Chain</option>
                 </select>
 			</div>
 		</div>
@@ -398,9 +398,9 @@
 		<div class="mini-box">
 			<h3>CARD</h3>
 				<select id="Card">
-                    <option value="Yellow_Card">Yellow Card</option>
-                    <option value="Red_Card">Red Card</option>
                     <option value="No_Card">No Card</option>
+                    <option value="Red_Card">Red Card</option>
+                    <option value="Yellow_Card">Yellow Card</option>
 n>                </select>
 			</div>
             <div class="mini-box">
