--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         .widget {
             margin: 20px;
             padding: 10px;
-            background: linear-gradient(to top, #ffffff 1%, #FF69B4 100%);
+            background: linear-gradient(to top, #00000000 1%, #FF69B4 100%);
             width: 275px;
 			height: 625px;
             border-radius: 10px;
@@ -191,6 +191,12 @@
 	.error {
     border: 2px solid red;
 }
+	.right-align {
+		text-align: right;
+	}
+	.left-align {
+		text-align: left;
+	}
     </style>
 </head>
 <body>
@@ -414,17 +420,24 @@ n>                </select>
     </div>
 
     <!-- Submit Info Button -->
-    <button id="submit-button" onclick="updateQRCodeOnSubmit()">Submit Info</button>
-    <button id="submit-button" onclick="ClearAll()">Clear All</button>
-	
+	<div class="right-align" style="display: inline-block; float: right; margin-left: 10px;">
+		<button id="submit-button" style="margin-bottom: 200px;" onclick="updateQRCodeOnSubmit()">Submit Info</button>
+	</div>
+	<div class="left-align" style="display: inline-block; float: left;">
+		<button id="submit-button" style="margin-bottom: 200px;" onclick="ClearAll()">Clear All</button>
+	</div>
 	
 	<div style="width: 100%; overflow: hidden;">
 		<div style="display: inline-block; float: left;">
-			<img src="assets/Pictures/4063_Logo.png" style="height: 147px; width: 346px; display: block; margin-left: 0;" alt="4063 Logo">
+		<a href="https://www.Team4063.com" target="_blank">
+			<img src="assets/Pictures/4063_Logo.png" style="height: 147px; width: 346px; margin-left: 0;" alt="4063 Logo">
+		</a>
 		</div>
+		<a href="https://www.firstinspires.org/robotics/frc" target="_blank">
 		<div style="display: inline-block; float: right; margin-left: 10px;">
 			<img src="assets/Pictures/Crescendo_Logo.png" style="height: 147px; width: 346px;" alt="Crescendo Logo">
 		</div>
+		</a>
 	</div>
 	<footer id="myFooter">
     <p>Made By Michael Cariaga And Antonio Scott</p>
@@ -546,7 +559,7 @@ n>                </select>
         function updateButtonNum(variable, value) {
     gameData[variable] += value;
     if (variable === 'teleopFoul') {
-        gameData[variable] = Math.max(gameData[variable], -1000);
+        gameData[variable] = Math.max(gameData[variable], -69);
     } else {
         gameData[variable] = Math.max(gameData[variable], 0);
     }
