--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ n>                </select>
 			<img src="assets/Pictures/4063_Logo.png" style="height: 147px; width: 346px; margin-left: 0;" alt="4063 Logo">
 		</a>
 		</div>
-		<a href="https://www.firstinspires.org/robotics/frc" target="_blank">
+		<a href="https://www.firstinspires.org/robotics/frc/game-and-season" target="_blank">
 		<div style="display: inline-block; float: right; margin-left: 10px;">
 			<img src="assets/Pictures/Crescendo_Logo.png" style="height: 147px; width: 346px;" alt="Crescendo Logo">
 		</div>
