Seperated teh code
separated code into js css and html files

--- a/index.html
+++ b/index.html
@@ -4,199 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4063 Crescendo QRScout</title>
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <script src="QR-CodeGen.js"></script>
     <style>
-        @font-face {
-            font-family: 'SF Sports Night';
-            src: url('assets/Fonts/SF-Sports-Night.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-        @font-face {
-            font-family: 'SF Sports Night NS';
-            src: url('assets/Fonts/SF-Sports-Night-NS.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-        body {
-            font-family: 'SF Sports Night NS', sans-serif;
-            text-align: center;
-            margin: 20px;
-            background: linear-gradient(to bottom, #ffffff, #ffffff 75%, #FF69B4);
-            font-size: 24px;
-        }
-        h1 {
-            font-family: 'SF Sports Night', sans-serif;
-            color: #FF69B4;
-            font-size: 64px;
-            margin: 20px;
-			text-shadow: 0 4px 8px rgba(255, 105, 180, .7);
-			letter-spacing: 5px;
-        }
-		h2 {
-			margin: 10px;
-			color: #ffffff;
-			letter-spacing: 2px;
-		}
-        .dashboard {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            align-items: flex-start; /* Align items to the start of the cross-axis (top) */
-        }
-        .widget {
-            margin: 20px;
-            padding: 10px;
-            background: linear-gradient(to top, #00000000 1%, #FF69B4 100%);
-            width: 275px;
-			height: 625px;
-            border-radius: 10px;
-            box-shadow: 5 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .mini-box {
-            margin: 10px;
-            padding: 0px;
-            border-radius: 5px;
-            background-color: #ffffff;
-            box-shadow: 0 40px 80px rgba(0, 0, 0, 0.1);
-			flex-direction: column;
-        }
-        h3 {
-			margin: 0px;
-            font-family: tahoma, sans-serif;
-            font-size: 12px;
-            background-color: #d3d3d3;
-            padding: 2px;
-            text-align: left;
-            margin-top: 0;
-            border-radius: 0px;
-        }
-        button {
-            padding: 5px;
-            margin: 10px;
-            height: 32px;
-            width: 32px;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
-            background-color: #FF69B4;
-            color: #ffffff;
-        }
-		.checkbox-container {
-			text-align: center;
-		}
-		.custom-checkbox {
-			display: none;
-		}
-
-		.custom-checkbox + label {
-			margin-top: 15px;
-			margin-bottom: 10px;
-			position: relative;
-			display: inline-block;
-			width: 20px;
-			height: 20px;
-			background-color: #ccc;
-			border-radius: 50%;
-			cursor: pointer;
-		}
-
-		.custom-checkbox:checked + label {
-			background-color: #FF69B4;
-		}
-        #qr-code {
-            max-width: 300px;
-            margin: 20px auto;
-        }
-        img {
-			vertical-align: bottom;
-        }
-        #submit-button {
-            padding: 2px;
-            width: 200px;
-            font-size: 20px;
-            cursor: pointer;
-            border: 2px solid black;
-            border-radius: 5px;
-            background-color: #5f59ff;
-            color: #ffffff;
-            margin-top: 0px;
-			box-shadow: 0 40px 80px rgba(95, 89, 255, 0.6);
-        }
-		@keyframes buttonPress {
-            0% { transform: scale(1); }
-            50% { transform: scale(0.90); }
-            100% { transform: scale(1); }
-        }
-		button:hover {
-			filter: grayscale(20%);
-		}
-        button:active {
-            animation: buttonPress 0.2s linear;
-        }
-        /* Popup styling */
-        .popup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #ffffff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-        }
-        .overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 999;
-        }
-		input {
-			height: 40px;
-			width: 97%;
-		}
-		textarea {
-			resize: none;
-		}
-		select {
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            appearance: none; 
-            -webkit-appearance: none; 
-            background-color: #ffffff;
-            color: #333;
-            cursor: pointer;
-			width: 100%;
-        }
-        select option {
-            padding: 10px;
-            background-color: #ffffff;
-            color: #333;
-        }
-        select:focus {
-            outline: none;
-            box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-            border-color: rgba(81, 203, 238, 1);
-        }
-		#myFooter {
-    color: #FFFFFF;
-	}
-	.error {
-    border: 2px solid red;
-}
-	.right-align {
-		text-align: right;
-	}
-	.left-align {
-		text-align: left;
-	}
+		<link rel="stylesheet" href="indexCascadingStylingSheets.css">
     </style>
 </head>
 <body>
@@ -458,197 +268,7 @@ n>                </select>
     </div>
     <div class="overlay" id="overlay"></div>
 
-    <script>
-        const gameData = {
-			initials: "",
-			matchNum: 0,
-			robot: "",
-			teamNum: 0,
-			humanAtAmp: false,
-			noShow: false,
-			mobility: false,
-			ampScored: 0,
-			ampMissed: 0,
-			speakerScored: 0,
-			speakerMissed: 0,
-			autoFoul: 0,
-			coopertition: false,
-			tampScored: 0,
-			tampMissed: 0,
-			tspeakerScored: 0,
-			tspeakerMissed: 0,
-			noteTrap: 0,
-			teleopFoul: 0,
-			endPos: "",
-			harmony: "",
-			offSkill: "",
-			defSkill: "",
-			died: false,
-			tippedOver: false,
-			card: "",
-			comments: ""
-		
-			
-            }
-		function ClearAll() {
-			document.getElementById('prematch-scout-initials').value = '';
-			document.getElementById('prematch-match-number').value = '';
-			document.getElementById('prematch-robot').value = 'Red 1';
-			document.getElementById('prematch-team-number').value = '';
-			document.getElementById('prematch-human-player').checked = false;
-			document.getElementById('prematch-no-show').checked = false;
-			document.getElementById('Mobility').checked = false;
-			document.getElementById('Died').checked = false;
-			document.getElementById('Tipped-Over').checked = false;
-			document.getElementById('Coopertition').checked = false;
-			document.getElementById('Spotlight').checked = false;
-			document.getElementById('End-Position').value = 'No Climb';
-			document.getElementById('Harmony').value = 'Not Completed';
-			document.getElementById('Offensive Skill').value = 'Not Effective';
-			document.getElementById('Defensive Skill').value = 'Not Effective';
-			document.getElementById('Card').value = 'Yellow Card';
-			document.getElementById('Comments').value = '';
-			
-			gameData.initials = '';
-			gameData.matchNum = 0;
-			gameData.robot = 'Red 1';
-			gameData.teamNum = 0;
-			gameData.humanAtAmp = false;
-			gameData.noShow = false;
-			gameData.mobility = false;
-			gameData.died = false;
-			gameData.tippedOver = false;
-			gameData.coopertition = false;
-			gameData.endPos = 'No Climb';
-			gameData.harmony = 'Not Completed';
-			gameData.offSkill = 'Not Effective';
-			gameData.defSkill = 'Not Effective';
-			gameData.card = 'Yellow Card';
-			gameData.comments = '';
-			gameData.ampScored = 0;
-			gameData.ampMissed = 0;
-			gameData.speakerScored = 0;
-			gameData.speakerMissed = 0;
-			gameData.autoFoul = 0;
-			gameData.tampScored = 0;
-			gameData.tampMissed = 0;
-			gameData.tspeakerScored = 0;
-			gameData.tspeakerMissed = 0;
-			gameData.noteTrap = 0;
-			gameData.teleopFoul = 0;
-
-			document.getElementById('ampScored').textContent = gameData.ampScored;
-			document.getElementById('ampMissed').textContent = gameData.ampMissed;
-			document.getElementById('speakerScored').textContent = gameData.speakerScored;
-			document.getElementById('speakerMissed').textContent = gameData.speakerMissed;
-			document.getElementById('autoFoul').textContent = gameData.autoFoul;
-			document.getElementById('tampScored').textContent = gameData.tampScored;
-			document.getElementById('tampMissed').textContent = gameData.tampMissed;
-			document.getElementById('tspeakerScored').textContent = gameData.tspeakerScored;
-			document.getElementById('tspeakerMissed').textContent = gameData.tspeakerMissed;
-			document.getElementById('noteTrap').textContent = gameData.noteTrap;
-			document.getElementById('teleopFoul').textContent = gameData.teleopFoul;
-			teamNumInput.classList.remove('error');
-			matchNumInput.classList.remove('error');
-			initialsInput.classList.remove('error');
-
-		}
-
-
-        function updateButtonNum(variable, value) {
-    gameData[variable] += value;
-    if (variable === 'teleopFoul') {
-        gameData[variable] = Math.max(gameData[variable], -69);
-    } else {
-        gameData[variable] = Math.max(gameData[variable], 0);
-    }
-    // Update HTML element value
-    document.getElementById(variable).textContent = gameData[variable];
-
-        function updateGameData(section, key, value) {
-            gameData[section][key] = value;
-        }
-		}
-		
-        function updateQRCodeOnSubmit() {
-		// Update all the gameData fields with the form values
-		gameData.initials = document.getElementById('prematch-scout-initials').value;
-		gameData.matchNum = parseInt(document.getElementById('prematch-match-number').value);
-		gameData.robot = document.getElementById('prematch-robot').value;
-		gameData.teamNum = parseInt(document.getElementById('prematch-team-number').value);
-		gameData.humanAtAmp = document.getElementById('prematch-human-player').checked;
-		gameData.noShow = document.getElementById('prematch-no-show').checked;
-		gameData.mobility = document.getElementById('Mobility').checked;
-		gameData.died = document.getElementById('Died').checked;
-		gameData.tippedOver = document.getElementById('Tipped-Over').checked;
-		gameData.coopertition = document.getElementById('Coopertition').checked;
-		gameData.endPos = document.getElementById('End-Position').value;
-		gameData.harmony = document.getElementById('Harmony').value;
-		gameData.offSkill = document.getElementById('Offensive Skill').value;
-		gameData.defSkill = document.getElementById('Defensive Skill').value;
-		gameData.card = document.getElementById('Card').value;
-		gameData.comments = document.getElementById('Comments').value;
-		gameData.spotlight = document.getElementById('Spotlight').checked;
-		// Update other fields similarly
-		
-		const initialsInput = document.getElementById('prematch-scout-initials');
-		const matchNumInput = document.getElementById('prematch-match-number');
-		const teamNumInput = document.getElementById('prematch-team-number');
-		
-		if (initialsInput.value === '') {
-			initialsInput.classList.add('error');
-		} 
-		else {
-			initialsInput.classList.remove('error');
-		}
-
-		if (matchNumInput.value === '') {
-			matchNumInput.classList.add('error');
-		} 
-		else {
-			matchNumInput.classList.remove('error');
-		}
-
-		if (teamNumInput.value === '') {
-			teamNumInput.classList.add('error');
-		} 
-		else {
-			teamNumInput.classList.remove('error');
-		}
-		// Generate QR code with updated gameData
-		generateQRCode();
-		}
-
-         function generateQRCode() {
-    if (
-        document.getElementById('prematch-scout-initials').value === "" ||
-        document.getElementById('prematch-match-number').value === "" ||
-        document.getElementById('prematch-team-number').value === ""
-    ) {
-        // Fields are empty
-    } else {
-        const qrCodeData = `${gameData.initials} ${gameData.matchNum} ${gameData.robot} ${gameData.teamNum} ${gameData.humanAtAmp} ${gameData.noShow} ${gameData.mobility} ${gameData.ampScored} ${gameData.ampMissed} ${gameData.speakerScored} ${gameData.speakerMissed} ${gameData.autoFoul} ${gameData.coopertition} ${gameData.tampScored} ${gameData.tampMissed} ${gameData.tspeakerScored} ${gameData.tspeakerMissed} ${gameData.noteTrap} ${gameData.teleopFoul} ${gameData.spotlight} ${gameData.endPos} ${gameData.harmony} ${gameData.offSkill} ${gameData.defSkill} ${gameData.died} ${gameData.tippedOver} ${gameData.card}`;
-		const qrCodeDataWithCommas = qrCodeData.split(' ').join('~');
-		const qrCodeDataWithCommasWithComment = qrCodeDataWithCommas + '~' + gameData.comments;
-        const qrCodeContainer = document.getElementById('qr-code-popup');
-        qrCodeContainer.innerHTML = '';
-
-        const qrCode = new QRCode(qrCodeContainer, {
-            text: qrCodeDataWithCommasWithComment,
-            width: 300,
-            height: 300,
-        });
-
-        document.getElementById('popup').style.display = 'block';
-        document.getElementById('overlay').style.display = 'block';
-    }
-}
-
-		function closePopup() {
-        document.getElementById('popup').style.display = 'none';
-        document.getElementById('overlay').style.display = 'none';
-    }
-</script>
+    <script src="indexJavaScript.js"></script>
 
 </body>
 </html>
