--- a/index.html
+++ b/index.html
@@ -146,6 +146,45 @@
 				<button type="button" onclick="updateButtonNum('teleopFoul', 1)">+</button>
 			</div>
         </div>
+        <div class="widget" id="Defense">
+		    <h2>DEFENSE</h2>
+		    <div class="mini-box">
+		        <h3>AMP MISSED</h3>
+		        <button type="button" onclick="updateButtonNum('dampMissed', -1)">-</button>
+				<span id="dampMissed">0</span>
+				<button type="button" onclick="updateButtonNum('dampMissed', 1)">+</button>
+		    </div>
+		    <div class="mini-box">
+		        <h3>AMP SCORED</h3>
+		        <button type="button" onclick="updateButtonNum('dampScored', -1)">-</button>
+				<span id="dampScored">0</span>
+				<button type="button" onclick="updateButtonNum('dampScored', 1)">+</button>
+		    </div>
+		    <div class="mini-box">
+		        <h3>SPEAKER MISSED</h3>
+		        <button type="button" onclick="updateButtonNum('dspeakerMissed', -1)">-</button>
+				<span id="dspeakerMissed">0</span>
+				<button type="button" onclick="updateButtonNum('dspeakerMissed', 1)">+</button>
+		    </div>
+		    <div class="mini-box">
+		        <h3>SPEAKER SCORED</h3>
+		        <button type="button" onclick="updateButtonNum('dspeakerScored', -1)">-</button>
+				<span id="dspeakerScored">0</span>
+				<button type="button" onclick="updateButtonNum('dspeakerScored', 1)">+</button>
+		    </div>
+		    <div class="mini-box">
+		        <h3>NOTE IN TRAP</h3>
+		        <button type="button" onclick="updateButtonNum('dnoteTrap', -1)">-</button>
+				<span id="dnoteTrap">0</span>
+				<button type="button" onclick="updateButtonNum('dnoteTrap', 1)">+</button>
+		    </div>
+		    <div class="mini-box">
+		        <h3>FOULS</h3>
+		        <button type="button" onclick="updateButtonNum('dfouls', -1)">-</button>
+				<span id="dfouls">0</span>
+				<button type="button" onclick="updateButtonNum('dfouls', 1)">+</button>
+		    </div>
+		</div>
 		<div class="widget" id="Endgame-Widget">
 			<h2>Endgame</h2>
 			<div class="mini-box">
@@ -214,7 +253,7 @@
                     <option value="No_Card">No Card</option>
                     <option value="Red_Card">Red Card</option>
                     <option value="Yellow_Card">Yellow Card</option>
-n>                </select>
+                    </select>
 			</div>
             <div class="mini-box">
                 <h3>COMMENTS</h3>
