--- a/index.html
+++ b/index.html
@@ -267,6 +267,17 @@
     <div class="overlay" id="overlay"></div>
 
     <script src="indexJavaScript.js"></script>
+	<script>
+		if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, function(err) {
+          console.error('ServiceWorker registration failed: ', err);
+        });
+      });
+    }
+	</script>
 
 </body>
 </html>
