--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="mini-box">
                 <h3>ROBOT</h3>
                 <select id="prematch-robot">
+                	<option value="Choose_Answer">Choose Answer</option>
                     <option value="Red_1">Red 1</option>
                     <option value="Red_2">Red 2</option>
                     <option value="Red_3">Red 3</option>
@@ -170,6 +171,7 @@
 			<div class="mini-box">
 				<h3>END POSITION</h3>
                 <select id="End-Position">
+                	<option value="Choose_Answer">Choose Answer</option>
                     <option value="No_Climb">No Climb</option>
                     <option value="Failed_Climb">Failed Climb</option>
                     <option value="Parked">Parked</option>
@@ -179,6 +181,7 @@
 			<div class="mini-box">
 				<h3>HARMONY</h3>
 				<select id="Harmony">
+					<option value="Choose_Answer">Choose Answer</option>
                     <option value="Not_Completed">Not Completed</option>
                     <option value="First_On_Chain">First On Chain</option>
                     <option value="Second_On_Chain">Second On Chain</option>
@@ -191,19 +194,19 @@
 			<div class="mini-box">
 				<h3>OFFENSIVE SKILL</h3>
 				<select id="Offensive Skill">
+					<option value="Not_Observed">Not Observed</option>
                     <option value="Not_Effective">Not Effective</option>
                     <option value="Average">Average</option>
                     <option value="Very_Effective">Very Effective</option>
-                    <option value="Not_Observed">Not Observed</option>
                 </select>
 			</div>
 			<div class="mini-box">
 			<h3>DEFENSIVE SKILL</h3>
 				<select id="Defensive Skill">
+					<option value="Not_Observed">Not Observed</option>
                     <option value="Not_Effective">Not Effective</option>
                     <option value="Average">Average</option>
                     <option value="Very_Effective">Very Effective</option>
-                    <option value="Not_Observed">Not Observed</option>
                 </select>
 			</div>
 			<div class="mini-box">
