--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>4063 Crescendo QRScout</title>
     <script src="QR-CodeGen.js"></script>
 	<script src="indexJavaScript.js"></script>
+	<link rel="manifest" href="/manifest.json">
 		<link rel="stylesheet" href="indexCascadingStylingSheets.css">
 </head>
 <body>
