--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="QR-CodeGen.js"></script>
 	<script src="indexJavaScript.js"></script>
 	<link rel="manifest" href="/manifest.json">
-		<link rel="stylesheet" href="indexCascadingStylingSheets.css">
+	<link rel="icon" type="image/png" href="/icon-192.png">
+  	<link rel="apple-touch-icon" href="/icon-512.png">
+	<link rel="stylesheet" href="indexCascadingStylingSheets.css">
 </head>
 <body>
 
