--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             </div>
         </div>
 
-        <!-- Autonomous Widget -->
-        <div class="widget" id="Autonomous-Widget">
-            <h2>Autonomous</h2>
+        <!-- Auto Widget -->
+        <div class="widget" id="Auto-Widget">
+            <h2>Auto</h2>
             <div class="mini-box">
                 <h3>MOBILITY?</h3>
                 <div class="checkbox-container">
