--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             });
         });
       }
+    else{
+        document.getElementById("prematch-widget").style.display = "none";
+    }
     </script>
 	<link rel="manifest" href="/manifest.json">
 	<link rel="icon" type="image/png" href="/icon-192.png">
