--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
 		</div>
 		</a>
 	</div>
+    <button onclick="showInstallPrompt()">Install App</button>
 	<footer id="myFooter">
     <p>Made By Michael Cariaga And Antonio Scott</p>
 	</footer>
