even cooler button

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 		</div>
 		</a>
 	</div>
-    <button onclick="showInstallPrompt()" style="display: inline-block; float: right; margin-left: 10px;">Install App</button>
+    <button id="submit-button" onclick="showInstallPrompt()" >Install App</button>
 	<footer id="myFooter">
     <p>Made By Michael Cariaga And Antonio Scott</p>
 	</footer>
