cache file bitton

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 		</div>
 		</a>
 	</div>
-    <button id="submit-button" onclick="showInstallPrompt()" >Install App</button>
+    <button id="submit-button" onclick="showInstallPrompt()" >Cache Files</button>
 	<footer id="myFooter">
     <p>Made By Michael Cariaga And Antonio Scott</p>
 	</footer>
