--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
                     <option value="Very_Effective">Very Effective</option>
                 </select>
 			</div>
+            <div class="mini-box">
+                <h3>SPEED</h3>
+                    <select id="Speed">
+                        <option value="Not_Observed">Not Observed</option>
+                        <option value="Slow">Slow</option>
+                        <option value="Average">Average</option>
+                        <option value="Fast">Fast</option>
+                    </select>
+                </div>
 			<div class="mini-box">
 			<h3>DIED</h3>
 			<div class="checkbox-container">
