--- a/index.html
+++ b/index.html
@@ -284,6 +284,12 @@
     <p>Made By Michael Cariaga And Antonio Scott</p>
 	</footer>
     <!-- Popup Panel -->
+    <div id="popup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup()">&times;</span>
+            <p>looks like you made a typo in the team number!!!!</p>
+        </div>
+    </div>
     <div class="popup" id="popup">
         <div id="qr-code-popup"></div>
         <button 
