--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <p>looks like you made a typo in the team number!!!!</p>
         </div>
     </div>
-    <div class="popup" id="popup">
+    <div class="popupQR" id="popupQR">
         <div id="qr-code-popup"></div>
         <button 
 		style="padding: 5px; 
