--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 			border-radius: 5px; 
 			background-color: #ff0000; 
 			color: #ffffff;" 
-		onclick="closePopup()">Close
+		onclick="closePopupQR()">Close
 		</button>
     </div>
     <div class="overlay" id="overlay"></div>
