--- a/index.html
+++ b/index.html
@@ -157,30 +157,30 @@
 			<div class="mini-box">
 				<h3>OFFENSIVE SKILL</h3>
 				<select id="Offensive Skill">
-					<option value="Not_Observed">Not Observed</option>
-                    <option value="0">Not Effective</option>
-                    <option value="1">Average</option>
-                    <option value="2">Effective</option>
-                    <option value="3">Very Effective</option>
+					<option value="0">Not Observed</option>
+                    <option value="1">Not Effective</option>
+                    <option value="2">Average</option>
+                    <option value="3">Effective</option>
+                    <option value="4">Very Effective</option>
                 </select>
 			</div>
 			<div class="mini-box">
 			<h3>DEFENSIVE SKILL</h3>
 				<select id="Defensive Skill">
-					<option value="Not_Observed">Not Observed</option>
-                    <option value="0">Not Effective</option>
-                    <option value="1">Average</option>
-                    <option value="2">Effective</option>
-                    <option value="3">Very Effective</option>
+					<option value="0">Not Observed</option>
+                    <option value="1">Not Effective</option>
+                    <option value="2">Average</option>
+                    <option value="3">Effective</option>
+                    <option value="4">Very Effective</option>
                 </select>
 			</div>
             <div class="mini-box">
                 <h3>SPEED</h3>
                     <select id="Speed">
-                        <option value="Not_Observed">Not Observed</option>
-                        <option value="0">Slow</option>
-                        <option value="1">Average</option>
-                        <option value="2">Fast</option>
+                        <option value="0">Not Observed</option>
+                        <option value="1">Slow</option>
+                        <option value="2">Average</option>
+                        <option value="3">Fast</option>
                     </select>
                 </div>
 			<div class="mini-box">
