medkit cause she healable

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup()">&times;</span>
-            <h1>looks like you made a typo in the team number!!!!</h1>
+            <p>Team Number Typed Wrong</p>
         </div>
     </div>
     <div class="popupQR" id="popupQR">
