--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
 
     <!-- Submit Info Button -->
 	<div class="right-align" style="display: inline-block; float: right; margin-left: 10px;">
-		<button id="submit-button" style="margin-bottom: 150px;" onclick="updateQRCodeOnSubmit()">Submit Info</button>
+		<button id="submit-button" style="margin-bottom: 150px;" onclick="updateQRCodeOnSubmit(); scrollToTop()">Submit Info</button>
 	</div>
 	<div class="left-align" style="display: inline-block; float: left;">
-		<button id="submit-button" style="margin-bottom: 150px;" onclick="ClearAll()">Clear All</button>
+		<button id="submit-button" style="margin-bottom: 150px;" onclick="ClearAll(); scrollToTop()">Clear All</button>
 	</div>
 	
 	<div style="width: 100%; overflow: hidden;">
